# Consultora

./: CMakeLists.txt  README.md  main.cpp  ranking_empresas.csv
dominio/: empresa.cpp  empresa.h
estructuras/: arbol.cpp  arbol.h  arbolprioridad.cpp  arbolprioridad.h  lista.cpp  lista.h
servicios/: gestorempresa.cpp  gestorempresa.h
utilidades/: lectorempresas.cpp  lectorempresas.h
